# codex-hack-bengaluru

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  README.md  package.json
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml
apps/api/app/: __init__.py  db.py  finding_text.py  main.py  models.py
apps/api/app/agents/: __init__.py  ai_guardrails.py  api_contract.py  auth.py  authz.py  base.py  build_type_lint.py  buildbreak.py  catalog.py  config_headers_cors.py  dependency.py  frontend_runtime.py  input_validation.py  planner.py  registry.py  repo_mapper.py  secrets.py  typelint.py  types.py  utils.py  webhook.py
apps/api/app/api/: __init__.py  router.py
apps/api/app/core/: __init__.py  config.py  lifespan.py  sse.py
apps/api/app/models/: __init__.py  audit.py  common.py  demo.py  health.py  repo_map.py  stream.py
apps/api/app/repositories/: __init__.py  audit_repository.py  database.py
apps/api/app/routes/: __init__.py  audits.py  health.py  wall.py
apps/api/app/sandbox/: __init__.py  cleanup.py  execution_layer.py  executor.py  git_clone.py  patching.py  paths.py  workspace.py
apps/api/app/services/: __init__.py  agent_runner.py  audit_coverage.py  audit_runner.py  (+11 more)
apps/api/tests/: support.py  test_agent_runner_execution.py  test_ai_guardrails.py  test_api_smoke.py  test_audit_lifecycle.py  test_audit_orchestration.py  test_finding_format.py  test_finding_noise_reduction.py  test_first_pass_deterministic_checks.py  test_patch_verifier.py  test_replay_vault.py  test_repo_mapper.py  test_specialist_coverage.py
(+68 files in other folders)
